--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "axios": "^1.7.7",
+    "mongoose": "^8.9.2",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "recharts": "^2.15.0",
+    "uuid": "^11.0.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
